--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.63.0"
+    "react-hook-form": "^7.63.0",
+    "react-select": "^5.10.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
